/* $Id$ */

/**
 *  @file
 *  Changelog for Embedded Video Field (emvideo).
 */

by aaron: Update all existing field duration data.
by aaron: Add devel content generate to Vimeo video.
by aaron: Add duration and devel content generate to UStream video.
by aaron: Add duration and devel content generate to MySpace video.
by aaron: Remove jumpcut provider, as they are now dead.
by aaron: Add duration and devel content generate to Google video.
by aaron: Implement hook_emvideo_PROVIDER_content_generate for Daily Motion.
by aaron: Add duration data to Blip.tv.
by aaron: Refactor theme to supply field duration column data.
by aaron: Add hook for provider data version.
by aaron: Add duration column to Archive.org.
by aaron: Add duration column to fields.

===============
 DRUPAL-6--1-7
===============

#588452 by Benjamin Melançon | swevel: Fixed phptemplate_get_ie_styles().

===============
 DRUPAL-6--1-6
===============

by aaron: Add support for flvmediaplayer profiles.
by aaron: Suppress admin_menu from modal iframe.
#491930 by aaron: Place html/head/body tags around modal iframe; add scripts.
#491930 by aaron: Don't load swfobject.api when using YouTube in modal.

===============
 DRUPAL-6--1-5
===============

#293153 by aaron: Work-around for not being able to paste Blip.tv embed codes.
#552388 by nick_robillard | srobert72: Fixed Default thumbnail doesn't appear.
by aaron: Add wrapper div w/ classes to video & preview.
by aaron: Change modal thumbnail position: relative.
by aaron: Fix YouTube duration and display of such.
by aaron: Fix new theme function names.
by aaron: Fix new formatters.
by aaron: Fetch YouTube duration.
by aaron: Remove the YouTube API secret key, which no longer exists.
by aaron: Change API info for YouTube.
by aaron: Add formatters for link & duration.
by aaron: Honor emfield option for thumbnail play button overlay.
#462170 by aaron: Add support for Shadowbox.
#445742 by aaron: Separate formatters for thickbox/lightbox.